--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "svelte": "^3.49.0",
     "svelte-bricks": "^0.1.7",
     "svelte-check": "^2.8.0",
-    "svelte-lightbox": "^0.6.6",
     "svelte-preprocess": "^4.10.7",
     "svelte-typeahead": "^4.2.4",
     "tailwindcss": "^3.1.7",
@@ -79,6 +78,10 @@
     "unocss": "^0.45.1",
     "vite": "^3.0.4",
     "vite-plugin-pwa": "^0.12.3",
-    "workbox-window": "^6.5.4"
+    "workbox-window": "^6.5.4",
+    "rollup": "^2.0.0"
+  },
+  "dependencies": {
+    "rollup-plugin-visualizer": "^5.7.1"
   }
 }
