--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
 node_modules
-.svelte-kit/*
+.svelte-kit
 /package
 src/routes/**/
 static/
-build/*
+build
 .vercel_build_output/
 .netlify/
 .env.local
