--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "devDependencies": {
     "@iconify-json/heroicons-outline": "^1.1.2",
     "@iconify-json/heroicons-solid": "^1.1.2",
-    "@iconify-json/ic": "^1.1.8",
+    "@iconify-json/ic": "^1.1.9",
+    "@iconify-json/simple-icons": "1.1.21",
+    "@iconify-json/material-symbols": "1.1.14",
     "@iconify-json/mdi": "^1.1.30",
     "@iconify-json/uil": "^1.1.2",
     "@sveltejs/adapter-auto": "1.0.0-next.64",
@@ -39,7 +41,7 @@
     "@sveltejs/adapter-static": "1.0.0-next.39",
     "@sveltejs/kit": "1.0.0-next.405",
     "@tailwindcss/typography": "^0.5.4",
-    "@types/node": "^18.7.1",
+    "@types/node": "^18.7.3",
     "@types/unist": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
@@ -47,8 +49,8 @@
     "chalk": "^5.0.1",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.1.12",
-    "daisyui": "^2.22.0",
+    "cssnano": "^5.1.13",
+    "daisyui": "^2.24.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -77,7 +79,7 @@
     "typescript": "^4.7.4",
     "unist-util-visit": "^4.1.0",
     "unocss": "^0.45.6",
-    "vite": "^3.0.6",
+    "vite": "^3.0.7",
     "vite-plugin-pwa": "^0.12.3",
     "workbox-window": "^6.5.4"
   }
