--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "zhlint": "zhlint urara/*/*.md --fix && zhlint urara/*.md --fix"
   },
   "devDependencies": {
-    "@iconify-json/heroicons-outline": "^1.1.2",
-    "@iconify-json/heroicons-solid": "^1.1.2",
+    "@iconify-json/heroicons-outline": "^1.1.4",
+    "@iconify-json/heroicons-solid": "^1.1.5",
     "@iconify-json/ic": "^1.1.9",
     "@iconify-json/simple-icons": "1.1.21",
     "@iconify-json/material-symbols": "1.1.14",
@@ -39,19 +39,19 @@
     "@sveltejs/adapter-auto": "1.0.0-next.64",
     "@sveltejs/adapter-node": "1.0.0-next.86",
     "@sveltejs/adapter-static": "1.0.0-next.39",
-    "@sveltejs/kit": "1.0.0-next.405",
+    "@sveltejs/kit": "1.0.0-next.456",
     "@tailwindcss/typography": "^0.5.4",
-    "@types/node": "^18.7.8",
+    "@types/node": "^18.7.14",
     "@types/unist": "^2.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.8",
     "chalk": "^5.0.1",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.13",
     "daisyui": "^2.24.0",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "fenceparser": "^2.2.0",
@@ -68,19 +68,20 @@
     "rehype-slug": "^5.0.1",
     "remark": "^14.0.2",
     "remark-footnotes": "~2.0.0",
+    "remark-fff": "^0.3.0-alpha.1",
     "shiki-twoslash": "^3.1.0",
     "svelte": "^3.49.0",
     "svelte-bricks": "^0.1.7",
-    "svelte-check": "^2.8.1",
+    "svelte-check": "^2.9.0",
     "svelte-preprocess": "^4.10.7",
     "svelte-typeahead": "^4.2.4",
     "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "unist-util-visit": "^4.1.0",
-    "unocss": "^0.45.8",
-    "vite": "^3.0.9",
-    "vite-plugin-pwa": "^0.12.3",
+    "typescript": "^4.8.2",
+    "unist-util-visit": "^4.1.1",
+    "unocss": "^0.45.13",
+    "vite": "^3.1.0-beta.1",
+    "vite-plugin-pwa": "^0.12.4",
     "workbox-window": "^6.5.4"
   }
 }
