--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "@iconify-json/heroicons-outline": "^1.1.4",
     "@iconify-json/heroicons-solid": "^1.1.5",
     "@iconify-json/ic": "^1.1.9",
-    "@iconify-json/simple-icons": "1.1.21",
     "@iconify-json/material-symbols": "1.1.14",
-    "@iconify-json/mdi": "^1.1.30",
+    "@iconify-json/mdi": "^1.1.31",
+    "@iconify-json/simple-icons": "1.1.21",
     "@iconify-json/uil": "^1.1.2",
     "@sveltejs/adapter-auto": "1.0.0-next.64",
     "@sveltejs/adapter-node": "1.0.0-next.86",
     "@sveltejs/adapter-static": "1.0.0-next.39",
     "@sveltejs/kit": "1.0.0-next.456",
-    "@tailwindcss/typography": "^0.5.4",
+    "@tailwindcss/typography": "^0.5.7",
     "@types/node": "^18.7.14",
     "@types/unist": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -64,24 +64,24 @@
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-external-links": "^2.0.0",
+    "rehype-external-links": "^2.0.1",
     "rehype-slug": "^5.0.1",
     "remark": "^14.0.2",
+    "remark-fff": "^0.3.0",
     "remark-footnotes": "~2.0.0",
-    "remark-fff": "^0.3.0-alpha.1",
     "shiki-twoslash": "^3.1.0",
-    "svelte": "^3.49.0",
+    "svelte": "^3.50.0",
     "svelte-bricks": "^0.1.7",
     "svelte-check": "^2.9.0",
     "svelte-preprocess": "^4.10.7",
-    "svelte-typeahead": "^4.2.4",
+    "svelte-typeahead": "^4.3.2",
     "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
     "typescript": "^4.8.2",
     "unist-util-visit": "^4.1.1",
-    "unocss": "^0.45.13",
-    "vite": "^3.1.0-beta.1",
-    "vite-plugin-pwa": "^0.12.4",
+    "unocss": "^0.45.14",
+    "vite": "^3.1.0-beta.2",
+    "vite-plugin-pwa": "^0.12.6",
     "workbox-window": "^6.5.4"
   }
 }
