--- a/package.json
+++ b/package.json
@@ -32,30 +32,30 @@
     "@iconify-json/heroicons-outline": "^1.1.4",
     "@iconify-json/heroicons-solid": "^1.1.5",
     "@iconify-json/ic": "^1.1.9",
-    "@iconify-json/material-symbols": "1.1.14",
+    "@iconify-json/material-symbols": "1.1.15",
     "@iconify-json/mdi": "^1.1.31",
-    "@iconify-json/simple-icons": "1.1.21",
+    "@iconify-json/simple-icons": "1.1.25",
     "@iconify-json/uil": "^1.1.2",
-    "@sveltejs/adapter-auto": "1.0.0-next.64",
-    "@sveltejs/adapter-node": "1.0.0-next.86",
-    "@sveltejs/adapter-static": "1.0.0-next.39",
-    "@sveltejs/kit": "1.0.0-next.456",
+    "@sveltejs/adapter-auto": "1.0.0-next.71",
+    "@sveltejs/adapter-node": "1.0.0-next.88",
+    "@sveltejs/adapter-static": "1.0.0-next.42",
+    "@sveltejs/kit": "1.0.0-next.477",
     "@tailwindcss/typography": "^0.5.7",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.7.16",
     "@types/unist": "^2.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "autoprefixer": "^10.4.8",
     "chalk": "^5.0.1",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.13",
-    "daisyui": "^2.24.0",
+    "daisyui": "^2.25.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "fenceparser": "^2.2.0",
-    "fff-flavored-frontmatter": "~0.2.2",
+    "fff-flavored-frontmatter": "~0.3.0",
     "github-slugger": "^1.4.0",
     "mdast-util-to-string": "^3.1.0",
     "mdsvex": "^0.10.6",
@@ -79,9 +79,9 @@
     "tslib": "^2.4.0",
     "typescript": "^4.8.2",
     "unist-util-visit": "^4.1.1",
-    "unocss": "^0.45.14",
-    "vite": "^3.1.0-beta.2",
-    "vite-plugin-pwa": "^0.12.6",
+    "unocss": "^0.45.18",
+    "vite": "^3.1.0",
+    "vite-plugin-pwa": "^0.12.7",
     "workbox-window": "^6.5.4"
   }
 }
