fix：修复标题问题

--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
     "dev": "npm-run-all -s tsc \"dev:parallel {@} \" --",
     "build": "npm-run-all -s tsc urara:build kit:build clean",
     "preview": "vite preview",
-    "dev:urara": "node urara.js watch",
-    "dev:kit": "export NODE_OPTIONS=--max_old_space_size=8192 && MODE=development svelte-kit dev",
-    "build:urara": "node urara.ts build",
-    "build:kit": "export NODE_OPTIONS=--max_old_space_size=8192 && svelte-kit build",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -50,12 +46,12 @@
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.13",
-    "daisyui": "^2.25.0",
+    "daisyui": "^2.31.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "fenceparser": "^2.2.0",
-    "fff-flavored-frontmatter": "~0.3.0",
+    "fenceparser": "2.0.0",
+    "fff-flavored-frontmatter": "~0.2.2",
     "github-slugger": "^1.4.0",
     "mdast-util-to-string": "^3.1.0",
     "mdsvex": "^0.10.6",
@@ -64,7 +60,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-external-links": "^2.0.1",
+    "rehype-external-links": "^1.0.1",
     "rehype-slug": "^5.0.1",
     "remark": "^14.0.2",
     "remark-fff": "^0.3.0",
