--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "tsc:watch": "tsc -w -p tsconfig.node.json",
     "urara:build": "node urara.js build",
     "urara:watch": "node urara.js watch",
-    "kit:dev": "cross-env NODE_OPTIONS=--max_old_space_size=7680 vite dev",
-    "kit:build": "cross-env NODE_OPTIONS=--max_old_space_size=7680 vite build",
+    "kit:dev": "cross-env NODE_OPTIONS=--max_old_space_size=8192 vite dev",
+    "kit:build": "cross-env NODE_OPTIONS=--max_old_space_size=8192 vite build",
     "dev:parallel": "npm-run-all -p -r tsc:watch urara:watch \"kit:dev {@} \" --",
     "dev": "npm-run-all -s tsc \"dev:parallel {@} \" --",
     "build": "npm-run-all -s tsc urara:build kit:build clean",
@@ -32,10 +32,10 @@
     "@iconify-json/mdi": "^1.1.31",
     "@iconify-json/simple-icons": "1.1.25",
     "@iconify-json/uil": "^1.1.2",
-    "@sveltejs/adapter-auto": "1.0.0-next.72",
-    "@sveltejs/adapter-node": "1.0.0-next.89",
-    "@sveltejs/adapter-static": "1.0.0-next.42",
-    "@sveltejs/kit": "1.0.0-next.480",
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-node": "next",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "1.0.0-next.502",
     "@tailwindcss/typography": "^0.5.7",
     "@types/node": "^18.7.16",
     "@types/unist": "^2.0.6",
