--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
     "vite": "^3.1.0",
     "vite-plugin-pwa": "^0.12.7",
     "workbox-window": "^6.5.4"
+  },
+  "dependencies": {
+    "netlify-cli": "^12.0.11"
   }
 }
