--- a/package.json
+++ b/package.json
@@ -28,59 +28,61 @@
     "@iconify-json/heroicons-outline": "^1.1.4",
     "@iconify-json/heroicons-solid": "^1.1.5",
     "@iconify-json/ic": "^1.1.9",
-    "@iconify-json/material-symbols": "1.1.16",
-    "@iconify-json/mdi": "^1.1.31",
-    "@iconify-json/simple-icons": "1.1.25",
+    "@iconify-json/material-symbols": "1.1.22",
+    "@iconify-json/mdi": "^1.1.34",
+    "@iconify-json/simple-icons": "1.1.34",
     "@iconify-json/uil": "^1.1.2",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-node": "next",
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "1.0.0-next.502",
-    "@tailwindcss/typography": "^0.5.7",
-    "@types/node": "^18.7.16",
+    "@sveltejs/adapter-auto": "1.0.0-next.87",
+    "@sveltejs/adapter-node": "1.0.0-next.100",
+    "@sveltejs/adapter-static": "1.0.0-next.48",
+    "@sveltejs/kit": "1.0.0-next.544",
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/node": "^18.11.9",
     "@types/unist": "^2.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "autoprefixer": "^10.4.8",
-    "chalk": "^5.0.1",
+    "@types/workbox-build": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "@vite-pwa/sveltekit": "^0.0.1",
+    "autoprefixer": "^10.4.13",
+    "chalk": "^5.1.2",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.1.13",
-    "daisyui": "^2.31.0",
-    "eslint": "^8.23.0",
+    "cssnano": "^5.1.14",
+    "daisyui": "^2.40.1",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "fenceparser": "2.0.0",
-    "fff-flavored-frontmatter": "~0.2.2",
-    "github-slugger": "^1.4.0",
+    "fenceparser": "2.2.0",
+    "fff-flavored-frontmatter": "~0.4.0",
+    "github-slugger": "^2.0.0",
     "mdast-util-to-string": "^3.1.0",
     "mdsvex": "^0.10.6",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.7.0",
+    "prettier-plugin-svelte": "^2.8.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-external-links": "^1.0.1",
-    "rehype-slug": "^5.0.1",
+    "rehype-external-links": "^2.0.1",
+    "rehype-slug": "^5.1.0",
     "remark": "^14.0.2",
-    "remark-fff": "^0.3.0",
+    "remark-fff": "~0.4.0",
     "remark-footnotes": "~2.0.0",
     "shiki-twoslash": "^3.1.0",
-    "svelte": "^3.50.1",
+    "svelte": "^3.53.1",
     "svelte-bricks": "^0.1.7",
-    "svelte-check": "^2.9.0",
+    "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
-    "svelte-typeahead": "^4.3.2",
-    "tailwindcss": "^3.1.8",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.3",
+    "svelte-typeahead": "^4.4.1",
+    "tailwindcss": "^3.2.4",
+    "tslib": "^2.4.1",
+    "typescript": "^4.8.4",
     "unist-util-visit": "^4.1.1",
-    "unocss": "^0.45.18",
-    "vite": "^3.1.0",
-    "vite-plugin-pwa": "^0.12.7",
+    "unocss": "^0.46.5",
+    "vite": "^3.2.3",
+    "vite-plugin-pwa": "^0.13.3",
     "workbox-window": "^6.5.4"
   },
   "dependencies": {
-    "netlify-cli": "^12.0.11"
+    "netlify-cli": "^12.1.1"
   }
 }
