--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@sveltejs/adapter-static": "1.0.0-next.48",
     "@sveltejs/kit": "1.0.0-next.551",
     "@tailwindcss/typography": "^0.5.8",
+    "@sveltejs/adapter-netlify": "1.0.0-next.84",
     "@types/node": "^18.11.9",
     "@types/unist": "^2.0.6",
     "@types/workbox-build": "^5.0.1",
