--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@iconify-json/heroicons-solid": "^1.1.6",
     "@iconify-json/ic": "^1.1.10",
     "@iconify-json/material-symbols": "1.1.26",
+    "@iconify-json/icon-park-twotone": "1.1.5",
     "@iconify-json/mdi": "^1.1.39",
     "@iconify-json/simple-icons": "1.1.39",
     "@iconify-json/uil": "^1.1.3",
@@ -41,15 +42,15 @@
     "@types/node": "^18.11.17",
     "@types/unist": "^2.0.6",
     "@types/workbox-build": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "@vite-pwa/sveltekit": "^0.0.1",
     "autoprefixer": "^10.4.13",
     "chalk": "^5.2.0",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "daisyui": "^2.45.0",
+    "daisyui": "^2.46.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -71,7 +72,7 @@
     "shiki-twoslash": "^3.1.0",
     "svelte": "^3.55.0",
     "svelte-bricks": "^0.1.7",
-    "svelte-check": "^2.10.2",
+    "svelte-check": "^2.10.3",
     "svelte-preprocess": "^5.0.0",
     "svelte-preprocess-import-assets": "^0.2.5",
     "svelte-typeahead": "^4.4.1",
@@ -79,12 +80,12 @@
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
     "unist-util-visit": "^4.1.1",
-    "unocss": "^0.47.6",
-    "vite": "^4.0.2",
+    "unocss": "^0.48.0",
+    "vite": "^4.0.3",
     "vite-plugin-pwa": "^0.14.0",
     "workbox-window": "^6.5.4"
   },
   "dependencies": {
-    "netlify-cli": "^12.4.0"
+    "netlify-cli": "^12.4.1"
   }
 }
