--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "remark": "^14.0.2",
     "remark-fff": "~0.4.2",
     "remark-footnotes": "~2.0.0",
+    "rollup": "^3.10.0",
     "shiki-twoslash": "^3.1.0",
     "svelte": "^3.55.0",
     "svelte-bricks": "^0.1.7",
@@ -81,11 +82,16 @@
     "typescript": "^4.9.4",
     "unist-util-visit": "^4.1.1",
     "unocss": "^0.48.0",
-    "vite": "^4.0.3",
+    "vite": "^4.0.4",
     "vite-plugin-pwa": "^0.14.0",
     "workbox-window": "^6.5.4"
   },
   "dependencies": {
     "netlify-cli": "^12.5.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite>rollup": "^3.10.0"
+    }
   }
 }
