--- a/package.json
+++ b/package.json
@@ -27,69 +27,67 @@
   "devDependencies": {
     "@iconify-json/heroicons-outline": "^1.1.5",
     "@iconify-json/heroicons-solid": "^1.1.6",
-    "@iconify-json/ic": "^1.1.10",
-    "@iconify-json/icon-park-twotone": "1.1.5",
+    "@iconify-json/ic": "^1.1.12",
+    "@iconify-json/icon-park-twotone": "1.1.7",
     "@iconify-json/material-symbols": "1.1.26",
-    "@iconify-json/mdi": "^1.1.41",
-    "@iconify-json/simple-icons": "1.1.40",
+    "@iconify-json/mdi": "^1.1.44",
+    "@iconify-json/simple-icons": "1.1.42",
     "@iconify-json/uil": "^1.1.3",
-    "@sveltejs/adapter-auto": "^1.0.0",
-    "@sveltejs/adapter-netlify": "^1.0.0",
-    "@sveltejs/adapter-node": "^1.1.0",
-    "@sveltejs/adapter-static": "^1.0.1",
-    "@sveltejs/adapter-vercel": "1.0.2",
-    "@sveltejs/kit": "^1.0.11",
+    "@sveltejs/adapter-auto": "^1.0.2",
+    "@sveltejs/adapter-netlify": "^1.0.5",
+    "@sveltejs/adapter-node": "^1.1.4",
+    "@sveltejs/adapter-static": "^1.0.5",
+    "@sveltejs/adapter-vercel": "1.0.6",
+    "@sveltejs/kit": "^1.3.7",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.11.18",
     "@types/unist": "^2.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "@vite-pwa/sveltekit": "^0.1.2",
     "autoprefixer": "^10.4.13",
     "chalk": "^5.2.0",
-    "clsx": "^1.2.1",
     "chokidar": "^3.5.3",
+    "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "daisyui": "^2.46.1",
-    "eslint": "^8.31.0",
+    "daisyui": "^2.49.0",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "fenceparser": "^2.2.0",
     "fff-flavored-frontmatter": "~0.5.0",
     "github-slugger": "^2.0.0",
-    "mdast-util-to-string": "^3.1.0",
+    "mdast-util-to-string": "^3.1.1",
     "mdsvex": "^0.10.6",
+    "netlify-cli": "^12.10.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.2",
+    "prettier": "^2.8.3",
     "prettier-plugin-svelte": "^2.9.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.0.1",
     "rehype-slug": "^5.1.0",
     "remark": "^14.0.2",
-    "remark-fff": "~0.4.2",
+    "remark-fff": "~0.5.0",
     "remark-footnotes": "~2.0.0",
-    "rollup": "^3.10.0",
+    "rollup": "^3.12.0",
     "shiki-twoslash": "^3.1.0",
     "svelte": "^3.55.1",
     "svelte-bricks": "^0.1.7",
-    "svelte-check": "^3.0.2",
-    "svelte-preprocess": "^5.0.0",
+    "svelte-check": "^3.0.3",
+    "svelte-preprocess": "^5.0.1",
     "svelte-preprocess-import-assets": "^0.2.5",
     "svelte-typeahead": "^4.4.1",
     "tailwindcss": "^3.2.4",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4",
-    "unocss": "^0.48.4",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5",
+    "unocss": "^0.49.2",
     "vite": "^4.0.4",
-    "vite-imagetools": "^4.0.14",
+    "vite-imagetools": "^4.0.18",
     "vite-plugin-pwa": "^0.14.1",
     "workbox-build": "^6.5.4",
     "workbox-window": "^6.5.4"
-  },
-  "dependencies": {
-    "netlify-cli": "^12.5.0"
   },
   "pnpm": {
     "overrides": {
