new posts and remark42

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/unist": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
+    "@unocss/extractor-svelte": "^0.51.12",
     "@vite-pwa/sveltekit": "^0.1.2",
     "autoprefixer": "^10.4.13",
     "chalk": "^5.2.0",
@@ -62,8 +63,8 @@
     "mdsvex": "^0.10.6",
     "netlify-cli": "^12.10.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.9.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.0.1",
@@ -71,27 +72,23 @@
     "remark": "^14.0.2",
     "remark-fff": "~0.5.0",
     "remark-footnotes": "~2.0.0",
-    "rollup": "^3.13.0",
-    "shiki-twoslash": "^3.1.0",
+    "rollup": "^3.21.5",
+    "shiki-twoslash": "^3.1.2",
     "svelte": "^3.55.1",
     "svelte-bricks": "^0.1.7",
     "svelte-check": "^3.0.3",
-    "svelte-preprocess": "^5.0.1",
+    "svelte-preprocess": "^5.0.3",
     "svelte-preprocess-import-assets": "^0.2.5",
     "svelte-typeahead": "^4.4.1",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.3.2",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5",
-    "unocss": "^0.49.4",
-    "vite": "^4.1.1",
+    "typescript": "^5.0.4",
+    "unist-util-visit": "^4.1.2",
+    "unocss": "^0.51.8",
+    "vite": "^4.3.5",
     "vite-imagetools": "^4.0.18",
     "vite-plugin-pwa": "^0.14.1",
     "workbox-build": "^6.5.4",
     "workbox-window": "^6.5.4"
-  },
-  "pnpm": {
-    "overrides": {
-      "vite>rollup": "^3.13.0"
-    }
   }
 }
