--- a/netlify.toml
+++ b/netlify.toml
@@ -25,13 +25,12 @@ node_bundler = "esbuild"
 [[headers]]
   for = "/*"
   [headers.values]
-    Access-Control-Allow-Origin = "https://seviche.cc"
-    X-Frame-Options = "DENY"
+    Access-Control-Allow-Origin = "seviche.cc"
+    X-Frame-Options = "SAMEORIGIN"
     X-Content-Type-Options = "nosniff"
     X-XSS-Protection = "1; mode=block"
-    Content-Security-Policy = "style-src 'self' 'unsafe-inline'  http://fonts.cdnfonts.com/css/lato; script-src 'self' 'unsafe-inline' https://*.seviche.cc https://giscus.app https://hexoverc.vercel.app/umami.js https://cdn.splitbee.io/sb.js https://app.embed.im/snow.js https://plausiable.seviche.cc/js/script.js"
+    Content-Security-Policy = "style-src 'self' http://fonts.cdnfonts.com/css/lato https://giscus.app/default.css; script-src 'self' 'unsafe-inline' https://*.seviche.cc https://giscus.app https://hexoverc.vercel.app/umami.js https://cdn.splitbee.io/sb.js https://plausiable.seviche.cc/js/script.js"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Permissions-Policy = "usb=()"
 [[redirects]]
   from = "/.well-known/webfinger"
   to = "https://kongwoo.icu/.well-known/webfinger?resource=acct:blog@kongwoo.icu"
