--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "@unocss/extractor-svelte": "^0.51.13",
+    "@unocss/preset-web-fonts": "^0.52.4",
     "@vite-pwa/sveltekit": "^0.2.1",
     "chalk": "^5.2.0",
     "chokidar": "^3.5.3",
@@ -62,6 +63,7 @@
     "postcss-lightningcss": "^0.7.0",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.0",
+    "proxy-agent": "^6.2.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.1.0",
     "rehype-slug": "^5.1.0",
